[package]
name = "xp-io"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }

# Substrate primitives
sp-core =  { workspace = true }
sp-runtime =  { workspace = true }
sp-runtime-interface =  { workspace = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
]
