[package]
name = "xp-io"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }

# Substrate primitives
sp-core =  { workspace = true, default-features = false }
sp-runtime =  { workspace = true, default-features = false }
sp-runtime-interface =  { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
]
