[package]
name = "xp-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }

# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", features = ["alloc"] }


[features]
default = ["std"]
std = [
    "codec/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
]
