[package]
name = "xp-protocol"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }

# Substrate primitives
sp-runtime = { workspace = true }

# BEVM primitives
bevm-primitives = { path = "..", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    # BEVM primitives
    "bevm-primitives/std",
]
