[package]
name = "xp-protocol"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

# Substrate primitives
sp-runtime = { workspace = true, default-features = false }

# BEVM primitives
bevm-primitives = { path = "..", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    # Substrate primitives
    "sp-runtime/std",
    # BEVM primitives
    "bevm-primitives/std",
]
