[package]
name = "xp-rpc"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
hex = { workspace = true }
jsonrpc-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
