[package]
name = "xp-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
hex = { version = "0.4.3", features = ["alloc"], default-features = false }

jsonrpsee = { version = "0.16.2", features = ["server"] }
serde = { version = "1.0.192", features = ["derive", "alloc"] }

[dev-dependencies]
serde_json = "1.0.108"
