[package]
name = "xp-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.192", features = ["derive", "alloc"], optional = true }

# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", features = ["alloc"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
