[package]
name = "runtime-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
smallvec = "1.11.1"
static_assertions = "1.1.0"

# Substrate primitives
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-staking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }


# Substrate pallets
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
pallet-balances = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }


# BEVM primitives
bevm-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate primitives
    "sp-runtime/std",
    # Substrate pallets
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    # BEVM primitives
    "bevm-primitives/std",
]
