[package]
name = "xpallet-assets-bridge"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

pallet-evm = { workspace = true, default-features = false }

[dev-dependencies]
ethabi = { workspace = true }
hex-literal = { workspace = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true }
xpallet-btc-ledger = { path = "../btc-ledger" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",

	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"pallet-evm/std",
]
try-runtime = ["frame-support/try-runtime"]
